# Fitness-Score-Manager

./: .gitignore  README_zh_CN.md  client.py  pyproject.toml  server.py  test.py
