[tool.poetry]
name = "学员体能考核成绩管理系统"
version = "0.1.0"
description = ""
authors = ["kaesinol <keiplyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.31.0"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
